@@ -197,6 +197,8 @@ public class DropIfNotDeliverableUniqueOnly implements I_Plugin, I_AccessFilter,
     * @return { "*" } This plugin handles all mime types
     */
    public String[] getMimeTypes() {
+      if (this.mimeTypes == null)
+         return new String[0];
       return this.mimeTypes;
    }
 
@@ -205,7 +207,7 @@ public class DropIfNotDeliverableUniqueOnly implements I_Plugin, I_AccessFilter,
     * @return "1.0" (this is the default version number)
     */
    public String[] getMimeExtended() {
-      String[] mimeExtended = new String[this.mimeTypes.length];
+      String[] mimeExtended = new String[getMimeTypes().length];
       for (int i=0; i<mimeExtended.length; i++)
          mimeExtended[i] = Constants.DEFAULT_CONTENT_MIME_EXTENDED;
       return mimeExtended;
